<resources>
    <string name="app_name">wassallni</string>
    <!-- Strings related to login -->

    <string name="login">Login</string>
    <string name="prompt_name" translatable="false">Name</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_confirm_password" translatable="false">Confirm Password</string>
    <string name="prompt_phone" translatable="false">Phone</string>
    <string name="action_sign_in" translatable="false">register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="sign_in_not_available_today" translatable="false">Sorry ,Sign in Tomorrow \n
        Sign in isn\'t available Today</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="verification_code_invalid">The verification code entered was invalid</string>
    <string name="error_occurred" translatable="true">An error occurred</string>
    <string name="invalid_username" translatable="false">Invalid Name</string>
    <string name="invalid_phone_number" translatable="false">Invalid Number</string>
    <string name="valid_data" translatable="false">Valid Data ❤❤😍</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_map_api_key" translatable="false">Helloblankfragment</string>

    <string name="facebook_app_id" translatable="false">385793220291840</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb385793220291840</string>

    <string name="facebook_client_token" translatable="false">e3194b4992ad9e083d57731c9fe11c42</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_maps2" translatable="false">MapsActivity2</string>
    <string name="title_activity_driver_request" translatable="false">DriverRequest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="errormin" translatable="false">error occurred</string>
    <string name="name">Name</string>
    <string name="trip_details">trip details</string>
    <string name="resend_code">resend code</string>
    <string name="verify">verify</string>
    <string name="sms_code_sent_to">SMS code sent to </string>
    <string name="you_signed_in_successfully">you signed in Successfully</string>
    <string name="seat_num">Seats Number</string>
    <string name="price">Trip price</string>
    <string name="total_price">Total price</string>
    <string name="EGP">EGP</string>
    <string name="driver">driver</string>
    <string name="date">Date</string>
    <string name="to">to</string>
    <string name="stations">Stations</string>
    <string name="book_trip">Book Trip</string>
    <string name="ride_station">ride station</string>
    <string name="ride_time">ride time</string>
    <string name="turn_device_location">turn on device location</string>
    <string name="gps_message">GPS is not enabled. Do you want to go to Settings menu ?</string>

    <string name="location_permission_failure">The app won\'t work properly ,you must give us location permission</string>
    <string name="from_where">Choose your location</string>
    <string name="calculate_distance">currently calculating the nearest station.</string>
    <string name="nearest_station">The nearest station from your location.</string>
    <string name="select_on_map">Select on map</string>
    <string name="accept">accept</string>
    <string name="maximum_seats_num">maximum number of seats is </string>
    <string name="seats_num">number of seats </string>
    <string name="num_available_seats">number of available seats currently on the trip is </string>
    <string name="current_location">Current location</string>
    <string name="myTrips">My Trips</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>
    <string name="no_trips">there is no trips</string>
    <string name="cancelled">Cancelled</string>
    <string name="missed">Missed</string>
    <string name="retry">retry</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="to_station">To Station</string>
    <string name="call">Call</string>
    <string name="cancel_success">Trip is Cancelled Successfully</string>
    <string name="cancel_failed">Failed to cancel reservation</string>
    <string name="type_here">Type here …</string>
    <string name="rate">Rate</string>
    <string name="driver_rate">driver rate</string>
    <string name="skip">skip</string>
    <string name="write_comment">Write your comment here …</string>
    <string name="rate_trip_on_wassallni">Rate your trip on Wassallni</string>
    <string name="rate_trip_driver">Rate your recent trip driver</string>
    <string name="Thank_you_for_using_app">Thank you for using our app!</string>
    <string name="what_is_your_opinion_on">What is your opinion on</string>
    <string name="give_your_ratings_according_to_service">Give your ratings according to service</string>
    <string name="rating_excellent">Excellent</string>
    <string name="rating_good">Good</string>
    <string name="rating_average">Average</string>
    <string name="rating_below_average">Below Average</string>
    <string name="rating_poor">Poor</string>
    <string name="rating_bad">Bad</string>
    <string name="driver_arrived_station">The driver arrived at the station.</string>
    <string name="dear_customer">Dear valued customer</string>
    <string name="user_canceled">The transaction has been canceled.</string>
    <string name="TRANSACTION_ERROR">TRANSACTION_ERROR</string>
    <string name="TRANSACTION_REJECTED">TRANSACTION_REJECTED</string>
    <string name="TRANSACTION_SUCCESSFUL">TRANSACTION_SUCCESSFUL</string>
    <string name="location_error">Location error</string>
    <string name="trip_booked_successfully">Trip is booked successfully</string>
    <string name="thank_you_for_your_feedback">Thank You for Your Feedback</string>
    <string name="ticket">ticket number</string>
    <string name="submit">Submit</string>
    <string name="change_station">Change Station</string>

</resources>
