<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group>
        <item android:id="@+id/nav_myTrips"
            android:title="@string/myTrips"
            
            />
        <item
            android:id="@+id/nav_balance"
            android:title="@string/balance"
            />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/nav_complain"
            android:title="@string/complain"
            />
    </group>

    <item
        android:title=""
        >
        <menu>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            />

        </menu>

    </item>
</menu>