<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_16sdp"
    android:layout_marginRight="@dimen/_16sdp"
    >

    <TextView
        android:id="@+id/tv_fromwhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/from_where"
        android:textColor="@color/gray700"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/autocomplete_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/gray_300"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_fromwhere"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        >
    <fragment
        android:id="@+id/autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/current_location_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/gray_300"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_card"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        >
        <ImageView
            android:id="@+id/rec_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/custom_rec"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/current_location"
            android:textColor="@color/gray_500"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toEndOf="@id/rec_anim"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/map_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/gray_300"
        app:strokeWidth="1dp"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/current_location_card"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        >

        <ImageView
            android:id="@+id/map_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pin"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/select_on_map"
            android:textColor="@color/gray_500"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toEndOf="@id/map_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loader"
        android:layout_width="@dimen/_88sdp"
        android:layout_height="@dimen/_96sdp"
        android:padding="8dp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_32sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_64sdp"
            android:src="@drawable/dual_ball"
            android:layout_gravity="center"
            />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>